# musicdb

./: MANIFEST.in  My Music DB Map.ipynb  README.md  artistDB.py  mergeDB.py  musicArtistData.py  musicDBArtistMap.py  musicDBData.py  musicDBMap.py  musicData.py  myMusicDBMap.py  myMusicMap.p  myMusicMap.yaml  pyproject.toml  setup.py
src/musicdb/: __init__.py  idstore.py  iostore.py  poolio.py
src/musicdb/albumoftheyear/: __init__.py  concatio.py  matchomit.py  mediasumprodio.py  mediautils.py  mergeio.py  metaprodio.py  musicdbid.py  musicdbio.py  params.py  parseio.py  rawdataio.py  rawwebdata.py
src/musicdb/albumoftheyear/old/: metadata.py  parserawdata.py
tests/: test_import.py
tests/albumoftheyear/: test_concatdata.py  test_concatmap.py  test_dbid.py  test_groupdata.py  test_matchprod.py  test_mediasumprod.py  test_mediautils.py  test_mergedata.py  test_mergemap.py  test_metaprod.py  test_modvaldataio.py  test_musicdbio.py  test_params.py  test_parsedata.py  test_parsemap.py  test_raw.py  test_rawdataio.py  test_sumprod.py
