[tool.poetry]
name = "musicdb"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "musicdb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.8.8"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
